@@ -1,6 +1,6 @@
-Date: 2020-07-13
+Date: 2020-07-14
 Package: CHNOSZ
-Version: 1.3.6-31
+Version: 1.3.6-32
 Title: Thermodynamic Calculations and Diagrams for Geochemistry
 Authors@R: c(
     person("Jeffrey", "Dick", , "j3ffdick@gmail.com", role = c("aut", "cre"),
